--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,18 @@
 body {
-    background-color: skyblue;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    background: aqua;
+}
+
+footer {
+    width: 100%;
+    height: 50px;
+    background: aqua;
+    position: relative;
 }
