--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -6,21 +6,14 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    <h2>Test de boucle for</h2>
+    <h2>Liste des articles</h2>
     <ul>
-        {% for firstname in firstnames %}
+        {% for article in articles %}
             <li>
-                {% if firstname == 'anthony' %}
-                    Bonjour
-                {% elseif firstname == 'bruno' %}
-                    Peut-être bonjour
-                {% else %}
-                    Pas bonjour
-                {% endif %}
-                {{ firstname }}
+               {{ article.title }}
             </li>
         {% else %}
-            <li>Pas de prénom</li>
+            <li>Pas d'article</li>
         {% endfor %}
     </ul>
 </div>
